force-app/main/default/objects/datoManualT24__c/datoManualT24__c.object-meta.xml
<CustomObject>
    <label>datoManualT24</label>
    <nameField>
        <label>Nombre de datoManualT24</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>datosManualT24</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>