force-app/main/default/objects/datoManualT24__c/fields/indice__c.field-meta.xml
<CustomField>
    <fullName>indice__c</fullName>
    <description>as</description>
    <displayFormat>{000000}</displayFormat>
    <inlineHelpText>as</inlineHelpText>
    <label>indice</label>
    <type>AutoNumber</type>
</CustomField>