force-app/main/default/objects/datoManualT24__c/fields/nombrePromotor__c.field-meta.xml
<CustomField>
    <fullName>nombrePromotor__c</fullName>
    <description>nombrePromotor</description>
    <inlineHelpText>nombrePromotor</inlineHelpText>
    <label>nombrePromotor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>