force-app/main/default/objects/datoManualT24__c/fields/producto__c.field-meta.xml
<CustomField>
    <fullName>producto__c</fullName>
    <description>producto</description>
    <inlineHelpText>producto</inlineHelpText>
    <label>producto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>