force-app/main/default/objects/datoManualT24__c/fields/promotor__c.field-meta.xml
<CustomField>
    <fullName>promotor__c</fullName>
    <description>promotor</description>
    <inlineHelpText>promotor</inlineHelpText>
    <label>promotor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>