force-app/main/default/objects/datoManualT24__c/fields/subproducto__c.field-meta.xml
<CustomField>
    <fullName>subproducto__c</fullName>
    <description>subproducto</description>
    <inlineHelpText>subproducto</inlineHelpText>
    <label>subproducto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>