force-app/main/default/objects/datoManualT24__c/fields/usuario__c.field-meta.xml
<CustomField>
    <fullName>usuario__c</fullName>
    <description>usuario</description>
    <inlineHelpText>usuario</inlineHelpText>
    <label>usuario</label>
    <length>40</length>
    <type>Text</type>
</CustomField>